# FlamMap

./: README.md  pyproject.toml  run.py
configs/: example.yaml
data/cantera/: gri30.yaml  gri30_noKinetics.yaml
data/reference/: elem_enthalpies.json  symmetry_number.json
examples/: molecule.xyz
examples/orca/: orca.out
julia/: Project.toml
julia/src/: caft_metrics.jl
outputs/: CH4.json  CH4.yaml  CH4_7ba71c46.json  CH4_7ba71c46.yaml  CH4_7ba71c46_hf.csv  CH4_7ba71c46_limits.csv  CHN3.json  CHN3.yaml
src/flammability/: __init__.py  caft.py  cli.py  config.py  nasa.py  pd_analysis.py  runtime.py  species.py  stages.py  thermo_constants.py  thermo_extract.py  thermo_process.py  yaml_generation.py
